Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,7 +7,9 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  pool: Default
+  demands:
+  - agent.name -equals Varuns.Air.3
 
 steps:
 - script: echo Hello, world!
